--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>手指代碼與數值測試</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='css/styles.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ request.url_for('static', path='css/styles.css') }}">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#">
-            <img src="{{ url_for('static', path='images/SharingAcademy.png') }}" width="113" height="80" alt="logo">
+            <img src="{{ request.url_for('static', path='images/SharingAcademy.png') }}" width="113" height="80" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
 
     <!-- Banner Image -->
     <div class="banner-container">
-        <img src="{{ url_for('static', path='images/swp-01.png') }}" class="banner-image" alt="Banner">
+        <img src="{{ request.url_for('static', path='images/swp-01.png') }}" class="banner-image" alt="Banner">
     </div>
 
     <!-- Personality Test Modal -->
@@ -328,7 +328,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="{{ url_for('static', path='js/form-validation.js') }}"></script>
+    <script src="{{ request.url_for('static', path='js/form-validation.js') }}"></script>
 </body>
 
 </html>
